--- a/deltademslider.html
+++ b/deltademslider.html
@@ -75,7 +75,7 @@
 </div>
 
 <p></p>
-<p>Built using Leaflet, JQuery, and ESRI MapServer by Andy Bell</p>
+<p>Built using Leaflet, JQuery, and ESRI basemaps by Andy Bell</p>
 
 <script type="text/javascript">
 	$(function() {
