--- a/deltademslider.html
+++ b/deltademslider.html
@@ -72,7 +72,7 @@
 </div>
 
 <p></p>
-<p>Built using Leaflet, JQuery, and ESRI basemaps by <a href="https://watershed.ucdavis.edu/people/ambell">Andy Bell</a>. <a href="https://watershed.ucdavis.edu/project/historical-delta-elevation-model">More project information</a>. </p>
+<p>Built using Leaflet, JQuery, and ESRI basemaps by <a href="https://watershed.ucdavis.edu/people/Andy-Bell">Andy Bell</a>. <a href="https://watershed.ucdavis.edu/project/historical-delta-elevation-model">More project information</a>. </p>
 
 <script type="text/javascript">
 	$(function() {
