--- a/deltademslider.html
+++ b/deltademslider.html
@@ -84,11 +84,10 @@
 	<div>
 		<input id="slide" type="range" min="0" max="1" step="0.05" value="0.75" onchange="updateOpacity(this.value)">
 	</div>
-
-
-
-
 </div>
+
+<div>
+<img src="legend.png" style="width:500px;padding:5px;">
 </div>
 
 <p></p>
