--- a/slider.html
+++ b/slider.html
@@ -1,82 +1,94 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
-<title>CWS Experiments: Historical Delta Slider</title>
 <head>
+	<meta charset="utf-8" />
+	<title>Full Screen Historical Delta Slider</title>
 
-<!-- Setup Before-After Plugin dependencies -->
-<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.10.3.custom.min.js"></script>
-<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
-<script type="text/javascript" src="js/jquery.beforeafter-map-0.11.js"></script>
+	<!-- Setup Before-After Plugin dependencies -->
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery-ui-1.10.3.custom.min.js"></script>
+	<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
+	<script type="text/javascript" src="js/jquery.beforeafter-map-0.11.js"></script>
 
-<!-- Setup Leaflet -->
-<script type="text/javascript" src="js/leaflet.js"></script>
-<link rel="stylesheet" type="text/css" href="css/leaflet.css"/>
+	<!-- Setup Leaflet -->
+	<script type="text/javascript" src="js/leaflet.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/leaflet.css"/>
 
-<!-- ESRI-leaflet plugin-->
-<script type="text/javascript" src="js/esri-leaflet.js"></script>
+	<!-- ESRI-leaflet plugin-->
+	<script type="text/javascript" src="js/esri-leaflet.js"></script>
+
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+		}
+		html, body, #map-container{
+			height: 100%;
+			width: 100%;
+		}
+	  #basemaps-wrapper {
+	    position: absolute;
+	    top: 15px;
+	    right: 15px;
+	    z-index: 10;
+	    background: white;
+	    padding: 10px;
+	  }
+	  #basemaps {
+	    margin-bottom: 5px;
+	  }
+		#slide{
+				-webkit-appearance: none;
+				position: absolute;
+				width: 200px;
+				bottom: 10px;
+				left: 10px;
+		    z-index: 10;
+				border-radius: 15px;
+				background: white;
+				height: 7px;
+				border: 1px solid black;
+		  }
+		#before{
+			height:100vh;
+			width:100vw;
+			}
+		#after{
+			height:100vh;
+			width:100vw;
+			}
+	</style>
+
 </head>
 
 <body>
 
-<style>
-  #basemaps-wrapper {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 10;
-    background: white;
-    padding: 10px;
-  }
-  #basemaps {
-    margin-bottom: 5px;
-  }
-  #map-container{margin-left:auto;
-  margin-right:auto;
-	border:1px solid black;}
-	#slide{
-			-webkit-appearance: none;
-			position: absolute;
-			width: 200px;
-			bottom: 10px;
-			left: 10px;
-	    z-index: 10;
-			border-radius: 15px;
-			background: white;
-			height: 7px;
-			border: 1px solid black;
-	  }
-</style>
+	<!-- Create a map container div and divs for your two maps -->
+	<div id="map-container">
+		<!-- Make sure to give the map divs height and width -->
+		<div id="before"></div>
+		<div id="after"></div>
 
+		<div id="basemaps-wrapper" class="leaflet-bar">
+		  <select name="basemaps" id="basemaps">
+		    <option value="Topographic">Topographic<options>
+		    <option value="Streets">Streets</option>
+		    <option value="NationalGeographic">National Geographic<options>
+		    <option value="Oceans">Oceans<options>
+		    <option value="Gray">Gray<options>
+		    <option value="DarkGray">Dark Gray<options>
+		    <option value="Imagery">Imagery<options>
+		    <option value="ShadedRelief">Shaded Relief<options>
+			</select>
+		</div>
 
-
-<!-- Create a map container div and divs for your two maps -->
-<div id="map-container">
-	<!-- Make sure to give the map divs height and width -->
-	<div id="before" style="height:600px;width:900px;"></div>
-	<div id="after" style="height:600px;width:900px;"></div>
-
-	<div id="basemaps-wrapper" class="leaflet-bar">
-	  <select name="basemaps" id="basemaps">
-	    <option value="Topographic">Topographic<options>
-	    <option value="Streets">Streets</option>
-	    <option value="NationalGeographic">National Geographic<options>
-	    <option value="Oceans">Oceans<options>
-	    <option value="Gray">Gray<options>
-	    <option value="DarkGray">Dark Gray<options>
-	    <option value="Imagery">Imagery<options>
-	    <option value="ShadedRelief">Shaded Relief<options>
-  	</select>
+		<div>
+			<input id="slide" type="range" min="0" max="1" step="0.05" value="0.75" onchange="updateOpacity(this.value)">
+		</div>
 	</div>
 
-	<div>
-		<input id="slide" type="range" min="0" max="1" step="0.05" value="0.75" onchange="updateOpacity(this.value)">
-	</div>
-</div>
 
-
-<script type="text/javascript">
+	<script type="text/javascript">
 	$(function() {
 		// create a map in the "before" and "after" divs, set the view to a given place and zoom
 		// You may want to turn attributionControl off so that the Leaflet attribution doesn't slide with the slider. Place all attribution on the after map.
@@ -164,6 +176,9 @@
 
 			});
 
-</script>
+		//resize refresh
+		$(window).resize(function(){location.reload();});
+
+	</script>
 </body>
 </html>
