--- a/slider-fullscreen.html
+++ b/slider-fullscreen.html
@@ -17,6 +17,9 @@
 	<!-- ESRI-leaflet plugin-->
 	<script type="text/javascript" src="js/esri-leaflet.js"></script>
 
+	<!-- Font awesome icons -->
+	<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
+
 	<style>
 		body {
 			padding: 0;
@@ -29,7 +32,7 @@
 	  #basemaps-wrapper {
 	    position: absolute;
 	    top: 15px;
-	    right: 15px;
+	    left: 75px;
 	    z-index: 10;
 	    background: white;
 	    padding: 10px;
@@ -57,6 +60,12 @@
 			height:100vh;
 			width:100vw;
 			}
+		#full {
+			position: absolute;
+	    top: 15px;
+	    right: 15px;
+	    z-index: 10;
+		}
 	</style>
 
 </head>
@@ -80,6 +89,10 @@
 		    <option value="Imagery">Imagery<options>
 		    <option value="ShadedRelief">Shaded Relief<options>
 			</select>
+		</div>
+
+		<div id="full">
+			<a href="deltademslider.html"><i class="fa fa-compress fa-3x" style="color:grey"></i></a>
 		</div>
 
 		<div>
