--- a/deltademslider.html
+++ b/deltademslider.html
@@ -20,6 +20,7 @@
 <!-- Font awesome icons -->
 <link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
 
+
 </head>
 
 <body>
@@ -36,49 +37,51 @@
 
 
 <style>
-	body {
+    body {
 		padding: 0;
 		margin-left: 75px;
 		margin-right: 75px;
-	}
-  #basemaps-wrapper {
-    position: absolute;
-    top: 15px;
-    left: 75px;
-    z-index: 10;
-    background: white;
-    padding: 10px;
-  }
-  #basemaps {
-    margin-bottom: 5px;
-  }
-  #map-container{margin-left:auto;
-  margin-right:auto;
-	border:1px solid black;}
+        }
+    #basemaps-wrapper {
+        position: absolute;
+        top: 15px;
+        left: 75px;
+        z-index: 10;
+        background: white;
+        padding: 10px;
+        }
+    #basemaps {
+        margin-bottom: 5px;
+        }
+    #map-container{
+        margin-left:auto;
+        margin-right:auto;
+        border:1px solid black;
+        }
 	#slide{
-			-webkit-appearance: none;
-			position: absolute;
-			width: 200px;
-			bottom: 10px;
-			left: 10px;
-	    z-index: 10;
-			border-radius: 15px;
-			background: white;
-			height: 7px;
-			border: 1px solid black;
-	  }
+        -webkit-appearance: none;
+        position: absolute;
+        width: 200px;
+        bottom: 10px;
+        left: 10px;
+        z-index: 10;
+        border-radius: 15px;
+        background: white;
+        height: 7px;
+        border: 1px solid black;
+        }
 	#legend {
 		margin-left:auto;
 		margin-right: auto;
 		text-align: center;
 		padding:10px;
-	}
-	#full {
-		position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 10;
-	}
+        }
+	#fullicon {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        z-index: 10;
+        }
 </style>
 
 
@@ -89,14 +92,12 @@
 	<div id="before" style="height:600px;width:900px;"></div>
 	<div id="after" style="height:600px;width:900px;"></div>
 
-
-
 	<div id="basemaps-wrapper" class="leaflet-bar">
 	  <select name="basemaps" id="basemaps">
-	    <option value="Topographic">Topographic<options>
+        <option value="Oceans">Oceans<options>
+        <option value="Topographic">Topographic<options>
 	    <option value="Streets">Streets</option>
 	    <option value="NationalGeographic">National Geographic<options>
-	    <option value="Oceans">Oceans<options>
 	    <option value="Gray">Gray<options>
 	    <option value="DarkGray">Dark Gray<options>
 	    <option value="Imagery">Imagery<options>
@@ -104,7 +105,7 @@
   	</select>
 	</div>
 
-	<div id="full">
+	<div id="fullicon">
 		<a href="slider-fullscreen.html"><i class="fa fa-expand fa-3x" style="color:grey"></i></a>
 	</div>
 
@@ -125,68 +126,54 @@
 		// create a map in the "before" and "after" divs, set the view to a given place and zoom
 		// You may want to turn attributionControl off so that the Leaflet attribution doesn't slide with the slider. Place all attribution on the after map.
 		// You may also want to turn off inertia, which in some cases can cause the maps to go out of sync
-		var center = [38.2,-121.8], zoom = 9,
-		before = L.map('before', {attributionControl: false, inertia: false, minZoom: 8}).setView(center, zoom),
+
+        // inital map state
+		var center = [38.2,-121.8];
+        var zoom = 9;
+        var start_opacity = 0.75
+
+        // create before and after maps
+        before = L.map('before', {attributionControl: false, inertia: false, minZoom: 8}).setView(center, zoom);
 		after = L.map('after', {attributionControl: false, inertia: false, minZoom: 8}).setView(center, zoom);
 
 		// before layer
-		var before_layer = new L.esri.Layers.DynamicMapLayer("http://atlas.cws.ucdavis.edu/arcgis/rest/services/HistoricalDelta/HistoricalDelta_v6r4/MapServer", {opacity:0.75}).addTo(before);
-
+		var before_layer = new L.esri.Layers.DynamicMapLayer("http://atlas.cws.ucdavis.edu/arcgis/rest/services/HistoricalDelta/HistoricalDelta_v6r4/MapServer", {opacity:start_opacity}).addTo(before);
 
 		// after layer;
-		var after_layer = new L.esri.Layers.DynamicMapLayer("http://atlas.cws.ucdavis.edu/arcgis/rest/services/HistoricalDelta/Modern_Delta/MapServer", {opacity:0.75}).addTo(after);
+		var after_layer = new L.esri.Layers.DynamicMapLayer("http://atlas.cws.ucdavis.edu/arcgis/rest/services/HistoricalDelta/Modern_Delta/MapServer", {opacity:start_opacity}).addTo(after);
 
-		// Base map selector for after map
-		var layer1 = L.esri.basemapLayer('Oceans').addTo(after);
-		var layerLabels1;
+        // initial state of the basemaps for both maps (default is oceans)
+        var base_before = L.esri.basemapLayer('Oceans').addTo(before);
+        var base_after = L.esri.basemapLayer('Oceans').addTo(after);
 
-			function setBasemap1(basemap) {
-				if (layer1) {
-				after.removeLayer(layer1);
+        // Base map selector function to change basemap styles
+		var layerLabels; // layer for basemap layers
+
+        //for each map change the layer to a new ESRI basemap style
+        function setBasemap(map, layer, basemap) {
+            // remove current style
+            if (layer) {
+				map.removeLayer(layer);
 				}
-			layer1 = L.esri.basemapLayer(basemap);
-			after.addLayer(layer1);
-				if (layerLabels1) {
-					after.removeLayer(layerLabels1);
+            // change layer to desired basemap style
+			layer = L.esri.basemapLayer(basemap);
+            // adds new style to map
+			map.addLayer(layer);
+            // removes layer labels
+            if (layerLabels) {
+					map.removeLayer(layerLabels);
 					}
-
+            // basemap options with labels
 			if (basemap === 'ShadedRelief' || basemap === 'Oceans' || basemap === 'Gray' || basemap === 'DarkGray' || basemap === 'Imagery' || basemap === 'Terrain') {
+                    layerLabels = L.esri.basemapLayer(basemap + 'Labels');
+                map.addLayer(layerLabels);
+			     }};
 
-			  layerLabels1 = L.esri.basemapLayer(basemap + 'Labels');
-			  after.addLayer(layerLabels1);
-			}
-		  }
-
-		// Base map selector for before map
-		var layer2 = L.esri.basemapLayer('Oceans').addTo(before);
-		var layerLabels2;
-
-			function setBasemap2(basemap) {
-				if (layer2) {
-				before.removeLayer(layer2);
-				}
-			layer2 = L.esri.basemapLayer(basemap);
-			before.addLayer(layer2);
-				if (layerLabels2) {
-					before.removeLayer(layerLabels2);
-					}
-
-			if (basemap === 'ShadedRelief' || basemap === 'Oceans' || basemap === 'Gray' || basemap === 'DarkGray' || basemap === 'Imagery' || basemap === 'Terrain') {
-
-			  layerLabels2 = L.esri.basemapLayer(basemap + 'Labels');
-			  before.addLayer(layerLabels2);
-			}
-		  }
-
-		  //event listener to change basemaps
-			var basemaps = document.getElementById('basemaps');
-
-			basemaps.addEventListener('change', function(){
-				setBasemap1(basemaps.value);
-			});
-
-			basemaps.addEventListener('change', function(){
-				setBasemap2(basemaps.value);
+        // event listener to change basemaps
+        var basemaps = document.getElementById('basemaps');
+        basemaps.addEventListener('change', function(){
+				setBasemap(after, base_after, basemaps.value);
+                setBasemap(before, base_before, basemaps.value);
 			});
 
 		// opacity controls
@@ -195,18 +182,16 @@
 			after_layer.setOpacity(value);
 		}
 
-		////event listener to change basemaps
+		// event listener to change opacity
 		var slide = document.getElementById('slide');
 
-		slide.addEventListener('change', function(){
+        slide.addEventListener('change', function(){
 			updateOpacity(slide.value);
+            $("#legend").css("opacity", slide.value); // changes opacity of legend
 		});
 
-
-		// Call the Before-After plugin, passing through the variables that you used to setup the maps, and (optional) any options you'd like
-		$('#map-container').beforeAfter(before,after, {showFullLinks: false});
-
-			});
+		// Call the Before-After plugin
+		$('#map-container').beforeAfter(before,after, {showFullLinks: false});});
 
 </script>
 </body>
